--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,10 +7,25 @@
     "materialize-css": "^0.97.6"
   },
   "devDependencies": {
-    "grunt": "^1.0.1",
-    "grunt-contrib-uglify": "^1.0.1",
-    "grunt-contrib-watch": "^1.0.0",
-    "grunt-serve": "^0.1.6"
+    "babel-polyfill": "6.7.4",
+    "babel-preset-es2015": "6.5.0",
+    "babel-root-import": "3.2.2",
+    "babelify": "7.2.0",
+    "grunt": "0.4.5",
+    "grunt-browserify": "4.0.1",
+    "grunt-cli": "0.1.13",
+    "grunt-contrib-clean": "1.0.0",
+    "grunt-contrib-connect": "0.11.2",
+    "grunt-contrib-copy": "0.8.2",
+    "grunt-contrib-uglify": "1.0.0",
+    "grunt-contrib-watch": "0.6.1",
+    "grunt-dom-munger": "3.4.0",
+    "grunt-eslint": "^18.0.0",
+    "grunt-extract-sourcemap": "0.1.17",
+    "grunt-sass": "1.1.0",
+    "grunt-serve": "^0.1.6",
+    "grunt-vulcanize": "^1.0.0",
+    "jit-grunt": "^0.10.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
