--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,11 +4,11 @@
   "description": "iot UI project",
   "main": "iotUI.js",
   "dependencies": {
-    "materialize-css": "^0.97.6"
+    "materialize-css": "0.97.6"
   },
   "devDependencies": {
     "babel-polyfill": "6.7.4",
-    "babel-preset-es2015": "6.5.0",
+    "babel-preset-es2015": "^6.5.0",
     "babel-root-import": "3.2.2",
     "babelify": "7.2.0",
     "grunt": "0.4.5",
@@ -20,12 +20,12 @@
     "grunt-contrib-uglify": "1.0.0",
     "grunt-contrib-watch": "0.6.1",
     "grunt-dom-munger": "3.4.0",
-    "grunt-eslint": "^18.0.0",
+    "grunt-eslint": "18.0.0",
     "grunt-extract-sourcemap": "0.1.17",
     "grunt-sass": "1.1.0",
-    "grunt-serve": "^0.1.6",
-    "grunt-vulcanize": "^1.0.0",
-    "jit-grunt": "^0.10.0"
+    "grunt-serve": "0.1.6",
+    "grunt-vulcanize": "1.0.0",
+    "jit-grunt": "0.10.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
